--- a/css/media.css
+++ b/css/media.css
@@ -220,6 +220,7 @@
 }
 .contact-us .contianr .form .message textarea {
   height: 16rem;
+  font-size: 40px;
 }
 .footer .links ul li a i {
   font-size: 40px;
