--- a/css/style.css
+++ b/css/style.css
@@ -336,6 +336,9 @@ ul li .active {
   background-color: #f1f1f1;
   padding: 50px;
 }
+iframe {
+  aspect-ratio: 16 / 9;
+}
 .blog .contianr {
   text-align: center;
 }
